Доработал сервис, контроллер, маппер, Client и репозитории